--- a/package.json
+++ b/package.json
@@ -8,15 +8,18 @@
     "lint": "vue-cli-service lint"
   },
   "dependencies": {
+    "@tinymce/tinymce-vue": "^3.0.1",
     "axios": "^0.19.2",
     "core-js": "^3.16.1",
     "echarts": "^5.1.2",
     "element-ui": "^2.15.5",
     "node-sass": "^4.14.1",
     "sass-loader": "^8.0.0",
+    "tinymce": "^6.0.0",
     "v-viewer": "^1.6.4",
     "vue": "^2.6.14",
     "vue-particles": "^1.0.9",
+    "vue-quill-editor": "^3.0.6",
     "vue-router": "^3.5.2",
     "vuex": "^3.5.1",
     "vxe-table": "^3.3.10",
